# nuitka-gui

./: LICENSE  README.md  pyproject.toml
nuitka_gui/: main.py
